# c_HanoiTower

./: CMakeLists.txt  main  main.c
hanoiUtils/include/: gameLogics.h  initTower.h  printer.h
hanoiUtils/src/: gameLogics.c  initTower.c  printer.c
menus/include/: menu.h  menuHelper.h
menus/lang/include/: languages.h
menus/lang/langs/: enus  ptbr
menus/lang/src/: languages.c
menus/src/: menu.c  menuHelper.c
structs/: styles.c  tower.c  towersArray.c
structs/util/: creatorHelper.c
structs/util/include/: creatorHelper.h
structs/util/src/: creatorHelper.c
